--- a/editor/sass/ui.scss
+++ b/editor/sass/ui.scss
@@ -887,6 +887,7 @@ a:visited {
             height: 16px;
             background: #07f;
             border: 1px solid #000;
+            cursor: ew-resize;
 
             &:focus,
             &:hover {
