--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -32,18 +32,71 @@ body {
     height: auto;
 }
 
-#ui-top {
-    height: 48px;
-    line-height: 48px;
-    // background-color: #293538;
-    // background-color: #111;
+#ui-toolbar {
+    border-right: 1px solid #20292b;
 
     > .content {
-        overflow: hidden;
-        padding: 0 8px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 48px;
+        height: auto;
+        background-color: #293538;
 
         > .ui-button {
-            font-size: 12px;
+            display: block;
+            margin: 0;
+            padding: 0;
+            width: 48px;
+            height: 48px;
+            border: none;
+            overflow: hidden;
+
+            &.logo {
+                background-color: #f70;
+                background-image: url("https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/platform/images/logo/playcanvas-icon-80.png");
+                background-size: 14px 32px;
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+            &.icon {
+                color: #9ba1a3;
+                line-height: 46px;
+                font-family: 'ui-font-solid';
+                font-size: 24px;
+                text-align: center;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+                font-smoothing: antialiased;
+                background-color: #364346;
+
+                &.active {
+                    color: #40d47e;
+                    background-color: #2c393c;
+                }
+                &.disabled {
+                    opacity: 1;
+                    color: mix(#9ba1a3, #364346, 30%);
+
+                    &:hover,
+                    &:focus {
+                        color: mix(#9ba1a3, #364346, 30%);
+                        background-color: #364346;
+                    }
+                }
+                &:hover,
+                &:focus {
+                    color: #fff;
+                    background-color: #20292b;
+                }
+            }
+            &.designer-settings {
+                position: absolute;
+                left: 0;
+                bottom: 0;
+            }
         }
     }
 }
@@ -545,7 +598,7 @@ body {
         }
         &.selected {
             > .label {
-                background-color: #293538;
+                background-color: #20292b;
             }
         }
         > .icon {
@@ -584,6 +637,13 @@ body {
             background-color: rgba(#364346, 0.8);
         }
     }
+}
+
+.ui-select-field.viewport-camera {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 .picker-color {
